--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -14,15 +14,15 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Welcome to the 'Get started' page of the `jfa` package. In this vignette you are able to find detailed examples of how you can incorporate the functions provided by the package into your statistical sampling workflow.
+Welcome to the 'Get started' vignette of the `jfa` package. In this vignette, you are able to find simple examples of how the functions provided by the package facilitate the statistical audit sampling workflow. See the topic-specific vignettes for a more detailed explanation of these functions.
 
 ## Example data
 
-To concretely illustrate `jfa`'s functionality, we consider the `BuildIt` data set that is included in the package (for more info, see `?BuildIt`). This data set contains a population of 3500 invoices paid to a fictional construction company. Each invoice has an identification number (`ID`), a recorded value (`bookValue`), and a corresponding audit (true) value (`auditValue`).
+To concretely illustrate `jfa`'s functionality, we consider the `BuildIt` data set that is included in the package (for more info, see `?BuildIt`). This data set contains a population of 3500 invoices paid to the fictional 'BuildIt' construction company. Each invoice has an identification number (`ID`), a recorded value (`bookValue`), and a corresponding audit (true) value (`auditValue`).
 
-*Note: The information in the `auditValue` column is added for illustrative purposes, as it is unknown to the auditor before having audited any items from a sample.*
+**Note:** The information in the `auditValue` column is added for illustrative purposes since it will only be known to the auditor after having inspected a sample of invoices.
 
-First, we load the `jfa` package and the `BuildIt` data. The first 10 invoices from the data set are displayed below.
+First, we load the `jfa` package and the `BuildIt` data set. The first 10 invoices from the data set are displayed below.
 
 ```{r}
 library(jfa)
@@ -31,40 +31,47 @@ data('BuildIt')
 head(BuildIt, n = 10)
 ```
 
-For a fully explained walkthrough of `jfa`'s workflow functionality using the `BuildIt` data set, see [Workflow: Classical audit sampling](https://koenderks.github.io/jfa/articles/v1_sampling_workflow.html). For a Bayesian version of the walkthrough, see [Workflow: Bayesian audit sampling](https://koenderks.github.io/jfa/articles/v2_bayesian_sampling_workflow.html).
+For a fully illustrated walkthrough of `jfa`'s workflow functionality using the `BuildIt` data set, see [Workflow: Classical audit sampling](https://koenderks.github.io/jfa/articles/v1_sampling_workflow.html). For a Bayesian version of the illustrated walkthrough, see [Workflow: Bayesian audit sampling](https://koenderks.github.io/jfa/articles/v2_bayesian_sampling_workflow.html).
 
 ## (Optional) Using `auditPrior()`: The basics
 
-The `auditPrior()` function allows you to create a prior distribution for audit sampling. More specifically, this function sets up the prior distribution for the misstatement parameter in the statistical model that is specified later on. One advantage of Bayesian inference for auditors is that the prior distribution can be used to incorporate existing information into the statistical procedure, possibly yielding a decrease in sample size, and an increase in efficiency. The type of audit information that can be incorporated depends on the information that is available to the auditor. See the vignette [Planning: Prior distributions](https://koenderks.github.io/jfa/articles/v3_prior_distributions.html) or the accompanying [article](https://onlinelibrary.wiley.com/doi/10.1111/ijau.12240) for a detailed explanation of the types of audit information that `jfa` is able to incorporate into a prior distribution.
+The `auditPrior()` function can be used to create a prior distribution for the misstatement parameter in a statistical audit sampling model. In an audit sampling context, an advantage of Bayesian inference is that the prior distribution can be used to incorporate existing information into the statistical procedure. Incorporating existing information can potentially yield a decrease in sample size and an increase in efficiency. The type of audit information that can be incorporated depends on the information that is available in the context of the audit. See the vignette [Planning: Prior distributions](https://koenderks.github.io/jfa/articles/v3_prior_distributions.html) or the accompanying [article](https://onlinelibrary.wiley.com/doi/10.1111/ijau.12240) for a detailed explanation of the types of audit information that `jfa` is able to incorporate into a prior distribution.
 
-With the prior distribution in hand, Bayesian planning and evaluation can be performed by providing the returned object from the `auditPrior()` function as input for the `prior` argument in the `planning()` and `evaluation()` functions.
+With the prior distribution in hand, Bayesian audit sampling can be performed by providing the object returned by the `auditPrior()` function as input for the `prior` argument in subsequent calls to the `planning()` and `evaluation()` functions.
 
 ## Using `planning()`: The basics
 
-First of all, planning a sample requires that you have knowledge of the objective of your sampling procedure. Generally, a sampling objective can be one (or both) of the following: to *test* the population misstatement against a performance materiality (i.e., the maximum tolerable misstatement in the population), or to *estimate* the population misstatement with a minimum precision. Furthermore, it is advised to obtain knowledge of the assumed distribution of the expected data (`binomial`, `poisson`, or `hypergeometric`), and the expected (or tolerable) errors in the sample. When planning an audit sample, it is strongly advised to set the value for the expected errors in the sample conservatively to minimize the chance of the observed errors in the sample exceeding the expected errors, which would imply that insufficient work has been done in the end.
+Planning a minimum sample size requires knowledge of the conditions that lead to acceptance of the population (i.e., the sampling objectives). Generally, a sampling objective can be one (or both) of the following:
 
-With the `BuildIt` data set, because we have access to the booked amounts (monetary values) of each invoice in the population, we are going to consider each monetary unit in the population as a possible unit of inference. In this case, the audit standards assume such data to be distributed according to the Poisson distribution, and so we will use this distribution in this example as well. For illustrative purposes, we will use a strict requirement where the population will only be approved when the sample contains no misstatements.
+- **Hypothesis testing**: Obtain measures of evidence for the claim that the misstatement in the population is lower than a given performance materiality (i.e., the maximum tolerable misstatement).
+- **Estimation**: Obtain measures of accuracy for the claim that the misstatement in the population is a certain value (with a minimum precision).
 
-### Testing against a performance materiality
+Next to determining the sampling objective(s), it is also important to determine the statistical distribution linking the sample outcomes to the population misstatement (e.g., `poisson`, `binomial`, or `hypergeometric`). All three distributions are standard in an audit sampling context because they are (approximations) of the hypergeometric distribution, but `poisson` is the default in `jfa` because it is the most conservative.
 
-First, we take a look at how you can use the `planning()` function to construct a sample with the objective of testing the misstatement in the population against a performance materiality. In this example, we will set the performance materiality at 5% of the total value of the population.
+Lastly, it is advised to obtain knowledge of the expected (or tolerable) errors in the sample. It is strongly recommended to set the value for the expected errors in the sample conservatively to minimize the chance of the observed errors in the sample exceeding the expected errors, which would imply that insufficient work has been done in the end.
 
-Sampling objective: *Calculate a minimal sample size such that, when no misstatements are found in the sample, you have obtained 95% assurance that the misstatement in the population is lower than 5% of the total value.*
+With the `BuildIt` data set, because the booked amounts (monetary values) of each invoice in the population are given, an auditor may want to make a statement about the amount of misstatement in the population. For illustrative purposes we will tolerate zero misstatements in the sample.
 
-Planning a sample with this objective in mind can be done using the code below (specifically by specifying the `materiality` argument). Next, a summary of the results can be obtained using the `summary()` function. As you can see below, the minimal sample size to achieve 95% assurance with respect to the performance materiality of 5% is 60 monetary units.
+### Hypothesis testing
+
+First, let's take a look at how you can use the `planning()` function to calculate the minimum sample size for testing the hypothesis that the misstatement in the population is lower than the performance materiality. In this example the performance materiality is set to 5% of the total population value, meaning that the population may not contain more than 5% misstatement.
+
+**Sampling objective**: Calculate a minimum sample size such that, when no misstatements are found in the sample, there is a 95% chance that the misstatement in the population is lower than 5% of the population value.
+
+A minimum sample size for this sampling objective can be calculated by specifying the `materiality` parameter in the `planning()` function, see the code below. Next, a summary of the statistical results can be obtained using the `summary()` function. The results show that, given zero tolerable errors, the minimum sample size is 60 units.
 
 ```{r}
 stage1 <- planning(materiality = 0.05, expected = 0, likelihood = 'poisson', conf.level = 0.95)
 summary(stage1)
 ```
 
-### Obtaining a minimum precision
+### Estimation
 
-Next, we take a look at how you can use the `planning()` function to construct a sample with the objective of estimating the misstatement in the population with a minimum precision. The precision is defined as the difference between the most likely misstatement and the upper confidence bound on the misstatement and is an indication of the accuracy of your estimate. For this example, we will set the minimum precision to 2% of the population value.
+Next, let's take a look at how you can use the `planning()` function to calculate the minimum sample size for estimating the misstatement in the population with a minimum precision. The precision is defined as the difference between the most likely misstatement and the upper confidence bound on the misstatement. For this example, the minimum precision is set to 2% of the population value.
 
-Sampling objective: *Calculate a minimal sample size such that, when zero misstatements are found in the sample, you have obtained 95% assurance that the misstatement in the population is at most 2% above the most likely misstatement.*
+**Sampling objective**: Calculate a minimum sample size such that, when zero misstatements are found in the sample, there is a 95% chance that the misstatement in the population is at most 2% above the most likely misstatement.
 
-Planning a sample with this objective can be done using the code below (specifically by specifying the `min.precision` argument). As you can see below, the minimal sample size for to achieve a precision of at least 2% is 150 monetary units.
+A minimum sample size for this sampling objective can be calculated by specifying the `min.precision` parameter in the `planning()` function, see the code below. The results show that, given zero tolerable errors, the minimum sample size is 150 units.
 
 ```{r}
 stage1 <- planning(min.precision = 0.02, expected = 0, likelihood = 'poisson', conf.level = 0.95)
@@ -73,13 +80,13 @@ summary(stage1)
 
 ## Using `selection()`: The basics
 
-Selecting a sample using the `selection()` function requires knowledge of the sampling units (i.e., units of inference) in the population. Items can be selected from the population using *record sampling* (also known as attribute sampling or item sampling) using `units = 'items'`, or using *monetary unit sampling (MUS)* using `units = 'values'`. Selection also requires knowledge of the sampling algorithm. Sampling units can be selected with a *random sampling* scheme using `method = 'random'`, with a *cell sampling* scheme using `method = 'cell'`, or with a *fixed interval sampling* (also known as systematic sampling) scheme using `method = 'interval'`.
+Selecting a sample using the `selection()` function requires knowledge of units in the population that are eligible for selection (i.e., sampling units). Sampling units can be items or monetary units. Items can be selected from the population using record sampling (also known as attribute sampling or item sampling) with `units = 'items'`. On the other hand, monetary units can be selected from the population using monetary unit sampling (MUS) with `units = 'values'`. 
 
-See the vignette [Selection: Sampling methodology](https://koenderks.github.io/jfa/articles/v4_selection_methodology.html) for a more detailed explanation the selection algorithms implemented in `jfa`.
+Once the sampling units are determined it should also be determined what method is used to select the units (i.e., the selection method). Sampling units can be selected with a fixed interval sampling (also known as systematic sampling) scheme using `method = 'interval'` (the default), with a cell sampling scheme using `method = 'cell'`, using random sampling using `method = 'random'`, or using modified sieve sampling with `method = 'sieve'`. See the vignette [Selection: Sampling methodology](https://koenderks.github.io/jfa/articles/v4_selection_methodology.html) for a more detailed explanation the selection methods implemented in `jfa`.
 
 ### Record sampling
 
-First, we take a look at how you can use the `selection()` function to perform random sampling from the items in the population. As an example, the code below samples 60 invoices from the `BuildIt` data set using a *random record sampling* scheme.
+First, let's take a look at how the `selection()` function can be used to perform random record sampling. Random record sampling implies that the sampling units are set to `items` and the selection method is set to `random`. The code below selects the 60 planned invoices from the `BuildIt` data set using such a random record sampling scheme.
 
 ```{r}
 set.seed(1)
@@ -89,7 +96,7 @@ summary(stage2)
 
 ### Monetary unit sampling (MUS)
 
-Next, we take a look at how you can use the `selection()` function to perform fixed interval sampling using the monetary units in the population as sampling units. As an example, the code below samples 150 monetary units from the `BuildIt` data set using a *fixed interval monetary unit sampling* scheme.
+Next, let's take a look at how the `selection()` function can be used to perform fixed interval monetary unit sampling. Fixed interval monetary unit sampling implies that the sampling units are set to `values` and the selection method is set to `interval`. The code below selects 150 monetary units from the `BuildIt` data set using such a fixed interval monetary unit sampling scheme.
 
 ```{r}
 stage2 <- selection(data = BuildIt, size = 150, units = 'values', method = 'interval', values = 'bookValue')
@@ -98,7 +105,7 @@ summary(stage2)
 
 ### Extracting the sample
 
-The selected sample is stored in the object that is returned by the `selection()` function. It can be accesses or extracted by indexing it via `$sample`. The first 10 invoices in the previously selected sample of 60 invoices are displayed below. After this step it is up to the auditor to annotate the sample with their audit values.
+The selected units and corresponding items are stored in the object that is returned by the `selection()` function. The sample can be extracted from this object by indexing it via `$sample`, see the code below. After this step it is up to the auditor to annotate the sample.
 
 ```{r}
 set.seed(1)
@@ -110,33 +117,29 @@ head(sample, n = 10)
 
 ## Using `evaluation()`: The basics
 
-After saving the sample and annotating the invoices in the sample with their audit values you can perform statistical inference about the misstatement in the population with the `evaluation()` function. Next to a data sample as input, this function can also be used when you only have access to summary statistics from a data sample (e.g., sample size and number of errors). For an elaborate explanation of how to use this function in the context of each sampling objective, see the package vignettes [Evaluation: Testing misstatement](https://koenderks.github.io/jfa/articles/v6_testing_misstatement.html) and [Evaluation: Estimating misstatement](https://koenderks.github.io/jfa/articles/v5_estimating_misstatement.html).
+After annotating the items in the sample with their audit values you can perform statistical inference about the misstatement in the population with the `evaluation()` function. Next to a data sample as input, this function can also be used when only summary statistics from a data sample (e.g., sample size and number of errors) are available. For a more elaborate explanation of the output of this function for each sampling objective, see the package vignettes [Evaluation: Testing misstatement](https://koenderks.github.io/jfa/articles/v6_testing_misstatement.html) and [Evaluation: Estimating misstatement](https://koenderks.github.io/jfa/articles/v5_estimating_misstatement.html).
 
-### Summary statistics from the sample
+### Summary statistics
 
-First, let's take a look at how you can use the `evaluation()` function to evaluate the misstatement in the population using summary statistics from a sample. Suppose that in the previously selected sample of 60 invoices you have found that 1 invoice is missing. Using `x = 1` and `n = 60` you can provide these summary statistics of the sample to the `evaluation()` function. Don't forget to also specify the sampling objectives using the `materiality` or `min.precision` arguments. In the following example, a performance materiality of 5% again applies. Also note that these data ($n$, $x$) are best described using a binomial distribution, which is why we specify `method = 'binomial'`.
-
-Sampling objective: *Evaluate, on the basis of summary statistics of a sample, whether the misstatement in the population exceeds the performance materiality such that there is a 5% 'chance' of incorrectly concluding that the population is free of material misstatement.*
+First, let's take a look at how the `evaluation()` function can be combined with summary statistics from a sample. Suppose that in the previously selected sample of 60 invoices it is found that a single invoice is missing an autograph. These summary statistics can be provided to the `evaluation()` function with `x = 1` and `n = 60`. The function also requires that you specify the sampling objectives using the `materiality` or `min.precision` arguments. Again, a performance materiality of 5% again applies.
 
 ```{r}
-stage4 <- evaluation(materiality = 0.05, method = 'binomial', conf.level = 0.95, x = 1, n = 60)
+stage4 <- evaluation(materiality = 0.05, method = 'poisson', conf.level = 0.95, x = 1, n = 60)
 summary(stage4)
 ```
 
-As you can see above, the 95% upper bound for the misstatement is higher than 5% and therefore the sample does not provide sufficient evidence to conclude that the misstatement is lower than 5%.
+The results indicate that the most likely error in the population is 1.66%. Moreover, the 95% one-sided confidence interval for the population misstatement ranges from 0% to 7.9% and contains the performance materiality. This implies that we cannot reject the hypothesis that the population misstatement is lower than 5%, which is also indicated by a non-significant *p* value (*p* = 0.199).
 
-### Annotated sample
+### Data sample
 
-Next, we take a look at how you can use the `evaluation()` function to evaluate the misstatement using an annotated sample. Returning to our annotated sample from the `selection()` function, suppose that you have audited these 60 invoices and have found that they contain 1 misstatement. 
+Next, let's take a look at how the `evaluation()` function can be combined with a data sample. Returning to our annotated sample from the `selection()` function, suppose that in the previously selected sample of 60 invoices it is found that a single invoice has a true value that deviates from its booked value. 
 
 ```{r}
 sample$auditValue    <- sample$bookValue
 sample$auditValue[1] <- sample$auditValue[1] - 100
 ```
 
-You can evaluate the misstatement in the annotated sample using the `data`, `values`, `values.audit`, and `times` arguments. For example, the code below evaluates the misstatement in the population with respect to the performance materiality of 5% using the commonly used Stringer bound. You can find more information about which evaluation methods are implemented on the [home page](https://koenderks.github.io/jfa/).
-
-Sampling objective: *Evaluate, on the basis of an annotated sample, whether the misstatement in the population exceeds the allocated performance materiality such that there is a 5% 'chance' of incorrectly concluding that the population is free of material misstatement.*
+These data can be provided to the `evaluation()` function using the `data`, `values`, `values.audit`, and `times` arguments. The `method` argument determines the method of inference. For example, the code below evaluates the misstatement in the population using the commonly used Stringer bound. You can find more information about which evaluation methods are implemented on the [home page](https://koenderks.github.io/jfa/).
 
 ```{r}
 stage4 <- evaluation(materiality = 0.05, method = 'stringer', conf.level = 0.95,
@@ -145,9 +148,11 @@ stage4 <- evaluation(materiality = 0.05, method = 'stringer', conf.level = 0.95,
 summary(stage4)
 ```
 
+The results indicate that the most likely error in the population is 1%. Moreover, the 95% one-sided confidence interval for the population misstatement ranges from 0% to 6.5% and contains the performance materiality. The `stringer` method does not provide a *p* value for hypothesis testing.
+
 ## Using `report()`: The basics
 
-With the results from the `evaluation()` function in hand, you can use the `report()` function to automatically generate a report containing the data, the statistical results and their interpretation, and the conclusion of the sampling procedure with respect to the sampling objectives. The report can be generated by providing the object returned by the `evaluation()` function to the `report()` function.
+With the results from the `evaluation()` function in hand, a call to the `report()` function automatically generates a report containing the data, the statistical results and their interpretation, and the conclusion of the sampling procedure with respect to the sampling objectives. The object returned by the `evaluation()` function can be supplied directly to the `report()` function, see the code below.
 
 ```{r, eval = FALSE}
 stage4 <- evaluation(materiality = 0.05, method = 'stringer', conf.level = 0.95,
